--- a/BackJackRacer/app/views/users/index.html.erb
+++ b/BackJackRacer/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
   <%=f.label "Email"%>
   <%=f.text_field :email %>
   <%=f.label "Password"%>
-  <%=f.text_field :password %>
+  <%=f.password_field :password %>
   <%=f.submit "Sign In"%>
 <%end%>
 </div>
@@ -19,7 +19,7 @@
   <%=f.label "Email"%>
   <%=f.text_field :email %>
   <%=f.label "Password"%>
-  <%=f.text_field :password %>
+  <%=f.password_field :password %>
   <%=f.submit "Sign Up"%>
 <%end%>
 </div>
