added bets, and validates that you cant place bets if you docent have funds

--- a/BackJackRacer/app/views/rounds/new.html.erb
+++ b/BackJackRacer/app/views/rounds/new.html.erb
@@ -1,6 +1,9 @@
-<p>This is the new round path</p>
-
+<p>Your current balance is: <span id='balance'><%= current_user.funds %></span></p>
 <%= form_tag(rounds_path, method: "post") do %>
-  <%= text_field_tag(:q) %>
+  <%= text_field_tag(:bet_1) %>
+  <%= text_field_tag(:bet_2) %>
+  <%= text_field_tag(:bet_3) %>
+  <%= text_field_tag(:bet_4) %>
   <%= submit_tag("Start round") %>
 <% end %>
+  <p id="error"></p>
