Made errors red

--- a/BackJackRacer/app/views/rounds/new.html.erb
+++ b/BackJackRacer/app/views/rounds/new.html.erb
@@ -6,4 +6,4 @@
   <%= text_field_tag(:bet_4) %>
   <%= submit_tag("Start round") %>
 <% end %>
-  <p id="error"></p>
+  <p class="error" id="bet_error"></p>
