--- a/BackJackRacer/app/assets/stylesheets/application.css
+++ b/BackJackRacer/app/assets/stylesheets/application.css
@@ -1,3 +1,4 @@
+
 body {
   background-image: url('/finishline.jpg');
   background-repeat: no-repeat;
@@ -43,4 +44,8 @@ header h1 {
   float: right;
   padding: 10px;
   height: 100%
+}
+
+.error {
+  color: red;
 }
