--- a/BackJackRacer/app/views/layouts/application.html.erb
+++ b/BackJackRacer/app/views/layouts/application.html.erb
@@ -8,8 +8,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav>
+    <h1>Back Jack Racer</h1>
+    <% if session[:user_id] %>
+      <%= link_to "Logout", :logout, { :id => "logout" } %>
+    <% end %>
+  </nav>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
