--- a/BackJackRacer/app/views/rounds/show.html.erb
+++ b/BackJackRacer/app/views/rounds/show.html.erb
@@ -1,1 +1,5 @@
-<h1><% %></h1>
+<h1>The winner is racer <%= @round.winner.id %>!!!</h1>
+
+<!-- Game view goes here -->
+
+<!-- Button that appears after the game finishes goes here -->
