--- a/BackJackRacer/app/views/users/index.html.erb
+++ b/BackJackRacer/app/views/users/index.html.erb
@@ -1,25 +1,6 @@
-<div class='user_stuff'>
-  <div id='signin'>
-    <h3>Login</h3>
-    <%= form_tag(signin_path, method: "post") do %>
-      <%= label_tag(:username, "Username") %>
-      <%= text_field_tag(:username) %>
-      <%= label_tag(:password, "Password") %>
-      <%= password_field_tag(:password) %>
-      <%= submit_tag("Login") %>
-    <% end %>
-    <% if @error %>
-      <p class="error"><%= @error %></p>
-    <% end %>
-  </div>
-  <div id='signup'>
-    <h3>Sign Up</h3>
-    <%= form_for User.new, url: new_path do |f| %>
-    <%= f.label "Username" %>
-    <%= f.text_field :username, id: "signup_username" %>
-    <%= f.label "Password" %>
-    <%= f.password_field :password, id: "signup_password"%>
-    <%= f.submit "Sign Up" %>
-    <% end %>
-  </div>
+<%= render "partials/topnav" %>
+
+<div id='user_login'>
+  <%= render "partials/login" %>
+  <%= render "partials/signup" %>
 </div>
