--- a/BackJackRacer/app/views/users/index.html.erb
+++ b/BackJackRacer/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
+
 <%= render "partials/topnav" %>
 
-<div id='user_login'>
-  <%= render "partials/login" %>
-  <%= render "partials/signup" %>
+	<div id="login_box">
+		<%= render "partials/login" %>
+		<%= render "partials/signup" %>
 </div>
