--- a/BackJackRacer/app/views/partials/_bet.html.erb
+++ b/BackJackRacer/app/views/partials/_bet.html.erb
@@ -1,10 +1,14 @@
 <script>var balance = <%= current_user.funds.to_i %></script>
 <p>Your current balance is: <span id='balance'><%= current_user.funds %></span></p>
 <%= form_tag(rounds_path, method: "post") do %>
-	<%= text_field_tag(:bet_1) %>
-	<%= text_field_tag(:bet_2) %>
-	<%= text_field_tag(:bet_3) %>
-	<%= text_field_tag(:bet_4) %>
+	<%= text_field_tag(:bet_1, nil, class:'red')%>
+	<%= label_tag(:red,nil,class:'red-text')%>
+	<%= text_field_tag(:bet_1, nil, class:'green')%>
+	<%= label_tag(:green,nil,class:'green-text')%>
+	<%= text_field_tag(:bet_1, nil, class:'yellow')%>
+	<%= label_tag(:yellow,nil,class:'yellow-text')%>
+	<%= text_field_tag(:bet_1, nil, class:'blue')%>
+	<%= label_tag(:blue,nil,class:'blue-text')%>
 	<%= submit_tag("Start round") %>
 <% end %>
 <p class="error" id="bet_error"></p>
