--- a/BackJackRacer/app/assets/stylesheets/racer.css
+++ b/BackJackRacer/app/assets/stylesheets/racer.css
@@ -17,7 +17,7 @@ html {
     position: absolute;
     z-index: 1;
     font-size: 25px;
-    color: deeppink;
+    color: blue;
     height: 25px;
     width: 25px;
     text-align: center;
