made js for round page, and css for resoults page

--- a/BackJackRacer/app/views/rounds/results.html.erb
+++ b/BackJackRacer/app/views/rounds/results.html.erb
@@ -1,4 +1,6 @@
-<h1>Racer <%=@round.winner.id %> won!</h1>
-<h2>Your payout is: <%= @round.payout %></h2>
-<h2>Remaining funds: <%= @round.user.funds %></h2>
-<%= link_to "New Round", :new_round %>
+<div id="stats">
+	<div id="back"></div>
+	<h2>Your payout is: <span class="money"><%= @payout %></span></h2>
+	<h2>Remaining funds: <span class="money">	<%= @funds %></span></h2>
+	<%= link_to "New Round", :new_round %>
+</div>
