--- a/BackJackRacer/app/assets/stylesheets/application.css
+++ b/BackJackRacer/app/assets/stylesheets/application.css
@@ -29,8 +29,11 @@ nav h1 {
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   background-color: black;
-}
+  opacity: 0;
+  }
 #login_box {
   position: fixed;
   top:100px;
@@ -134,8 +137,50 @@ nav h1 {
   font-weight: bold;
 }
 
+#stats {
+  /*position: fixed;*/
+  /*margin-top: -25px;*/
+  /*left:50%;*/
+  /*margin-left: -400px;*/
+}
+#stats {
+  border: groove 10px red;
+  border-radius: 25px;
+  text-align: center;
 
+  position: fixed;
+  top: 100px;
+  left:50%;
+  margin-left: -350px;
+  width: 700px;
 
+  z-index: 3;
+  background-color: grey;
+  font-size: 30px;
+}
+#stats .money {
+  color:red;
+}
+#stats a{
+  margin: 7px auto;
+  width: 80%;
+  height: 30px;
+  display: block;
+  border:none;
+  border-radius: 5px;
+  color: #00FFFF;
+  text-align: center;
+  border:#00FFFF double 5px;
+  border-radius: 40px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 50px;
+  height: 60px;
+}
+#stats a:hover{
+  border:red double 5px;
+  color: red;
+}
 
 
 
