--- a/BackJackRacer/app/assets/stylesheets/application.css
+++ b/BackJackRacer/app/assets/stylesheets/application.css
@@ -7,6 +7,9 @@ body {
 
 .error {
 }
+#hide {
+  display: none;
+}
 nav {
   background-color: black;
   position :fixed;
@@ -17,15 +20,33 @@ nav {
 }
 nav h1 {
   display: inline-block;
+  color: white;
+  margin-left:20px;
+
   /*width: %;*/
 }
-#logout {
- color: white;
- float: right;
- text-decoration: none;
- margin-top: 25px;
+nav h3 {
+  padding: 0;
+  margin:0;
+  display: inline-block;
+  margin-right:20px;
+  margin-top: 25px;
+  float: right;
+  /*width: %;*/
 }
-#back {
+nav a{
+ text-decoration: none;
+  color: white;
+
+}
+nav a:hover{
+ text-decoration: none;
+  color: white;
+  border-bottom: double 5px #00FFFF;
+
+}
+
+#statsback, #newback, .back {
   position: fixed;
   top: 0;
   left: 0;
@@ -33,7 +54,7 @@ nav h1 {
   height: 100%;
   background-color: black;
   opacity: 0;
-  }
+}
 #login_box {
   position: fixed;
   top:100px;
@@ -77,16 +98,38 @@ nav h1 {
   padding: 0;
 }
 
-
-
 #bet {
-  width: 200px;
-  margin: 0 auto;
+  /*position: fixed;*/
+  /*margin-top: -25px;*/
+  /*left:50%;*/
+  /*margin-left: -400px;*/
+}
+#bet {
+  border: groove 10px red;
+  border-radius: 25px;
   text-align: center;
-  background-color: white;
-  padding: 15px;
-  border: double #00FFFF 10px;
-  border-radius: 35px;
+
+  position: fixed;
+  top: 100px;
+  left:50%;
+  margin-left: -250px;
+  width: 500px;
+
+  z-index: 3;
+  background-color: grey;
+  font-size: 20px;
+}
+
+
+#bet label{
+  display: block;
+  /*width: 200px;*/
+  /*margin: 0 auto;*/
+  /*text-align: center;*/
+  /*background-color: white;*/
+  /*padding: 15px;*/
+  /*border: double #00FFFF 10px;*/
+  /*border-radius: 35px;*/
 }
 
 #bet input[type='text'] {
@@ -97,19 +140,23 @@ nav h1 {
   border-radius: 5px;
   color: #00FFFF;
   text-align: center;
+  font-size: 15px;
 }
 
 #bet input[type='submit'] {
   margin: 7px auto;
   width: 80%;
-  height: 30px;
   display: block;
   border:none;
   border-radius: 5px;
   color: #00FFFF;
   text-align: center;
-  border:grey double 5px;
+  border:#00FFFF double 5px;
   border-radius: 40px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 30px;
+  height: 50px;
 }
 #bet input[type='submit']:hover {
   border:red double 5px;
@@ -132,17 +179,31 @@ nav h1 {
 #bet .blue {
   background-color: blue;
 } 
+#bet .red-text {
+  font-weight: bold;
+  color: red;
+} 
+
+#bet .green-text {
+  font-weight: bold;
+  color: green;
+} 
+
+#bet .yellow-text {
+  font-weight: bold;
+  color: yellow;
+} 
+
+#bet .blue-text {
+  font-weight: bold;
+  color: blue;
+} 
+
 #bet .error {
   color: red;
   font-weight: bold;
 }
 
-#stats {
-  /*position: fixed;*/
-  /*margin-top: -25px;*/
-  /*left:50%;*/
-  /*margin-left: -400px;*/
-}
 #stats {
   border: groove 10px red;
   border-radius: 25px;
