--- a/BackJackRacer/app/views/layouts/application.html.erb
+++ b/BackJackRacer/app/views/layouts/application.html.erb
@@ -3,12 +3,12 @@
 <head>
   <title>BackJackRacer</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div id="back"></div>
+<div class="back"></div>
   <%= yield %>
 </body>
 </html>
