--- a/BackJackRacer/app/views/partials/_bet.html.erb
+++ b/BackJackRacer/app/views/partials/_bet.html.erb
@@ -7,19 +7,19 @@ var randomNumbers = <%=@odds%>
 <%= label_tag(:red,nil,class:'red-text')%>
 <%= text_field_tag(:bet_1, nil, class:'red')%>
 Odds: <%= @odds[0] %>:1 Payout:<span id='payout1'>0</span>
-<%= hidden_field_tag('odds1', '', value: @odds[0]) %>
+<%= hidden_field_tag('odds_1', '', value: @odds[0]) %>
 <%= label_tag(:green,nil,class:'green-text')%>
 <%= text_field_tag(:bet_2, nil, class:'green')%>
 Odds: <%= @odds[1] %>:1 Payout:<span id='payout2'>0</span>
-<%= hidden_field_tag('odds2', '', value: @odds[1]) %>
+<%= hidden_field_tag('odds_2', '', value: @odds[1]) %>
 <%= label_tag(:yellow,nil,class:'yellow-text')%>
 <%= text_field_tag(:bet_3, nil, class:'yellow')%>
 Odds: <%= @odds[2] %>:1 Payout:<span id='payout3'>0</span>
-<%= hidden_field_tag('odds3', '', value: @odds[2]) %>
+<%= hidden_field_tag('odds_3', '', value: @odds[2]) %>
 <%= label_tag(:blue,nil,class:'blue-text')%>
 <%= text_field_tag(:bet_4, nil, class:'blue')%>
 Odds: <%= @odds[3] %>:1 Payout:<span id='payout4'>0</span>
-<%= hidden_field_tag('odds4', '', value: @odds[3]) %>
+<%= hidden_field_tag('odds_4', '', value: @odds[3]) %>
 <%= submit_tag("Start round") %>
 <% end %>
 <p class="error" id="bet_error"></p>
